--- a/pom.xml
+++ b/pom.xml
@@ -1,93 +1,95 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jenkins-ci.plugins</groupId>
-    <artifactId>active-directory</artifactId>
-    <version>2.17-SNAPSHOT</version>
-    <packaging>hpi</packaging>
+  <groupId>org.jenkins-ci.plugins</groupId>
+  <artifactId>active-directory</artifactId>
+  <version>2.17-SNAPSHOT</version>
+  <packaging>hpi</packaging>
 
-    <name>Jenkins Active Directory Plugin</name>
-    <url>https://github.com/jenkinsci/active-directory-plugin</url>
+  <properties>
+    <jenkins.version>2.426.3</jenkins.version>
+    <java.level>8</java.level>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.level>1.8</java.level>
-        <jenkins.version>2.346.3</jenkins.version>
-        <hpi.plugin.compatibleSinceVersion>2.7</hpi.plugin.compatibleSinceVersion>
-    </properties>
+  <repositories>
+    <repository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </repository>
+  </repositories>
 
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
+  <dependencies>
+    <!-- Jenkins Core -->
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>jenkins-core</artifactId>
+      <version>${jenkins.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
+    <!-- COM4J -->
+    <dependency>
+      <groupId>com4j</groupId>
+      <artifactId>com4j</artifactId>
+      <version>20100207</version>
+    </dependency>
+    <dependency>
+      <groupId>com4j</groupId>
+      <artifactId>typelibs-activeDirectory</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com4j</groupId>
+      <artifactId>typelibs-ado20</artifactId>
+      <version>1.0</version>
+    </dependency>
 
-    <dependencies>
-        <!-- Jenkins Core -->
-        <dependency>
-            <groupId>org.jenkins-ci.main</groupId>
-            <artifactId>jenkins-core</artifactId>
-            <version>${jenkins.version}</version>
-            <scope>provided</scope>
-        </dependency>
+    <!-- Servlet API -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
 
-        <!-- Annotation Processor -->
-        <dependency>
-            <groupId>org.jenkins-ci</groupId>
-            <artifactId>annotation-indexer</artifactId>
-            <version>1.12</version>
-        </dependency>
+    <!-- Optional Mailer (for user details) -->
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>mailer</artifactId>
+      <version>1.34</version>
+      <scope>provided</scope>
+    </dependency>
 
-        <!-- Test Dependencies -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <!-- Animal Sniffer (optional) -->
+    <dependency>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>animal-sniffer-annotations</artifactId>
+      <version>1.14</version>
+    </dependency>
+  </dependencies>
 
-    <build>
-        <plugins>
-            <!-- Jenkins Plugin Compiler -->
-            <plugin>
-                <groupId>org.jenkins-ci.tools</groupId>
-                <artifactId>maven-hpi-plugin</artifactId>
-                <version>3.11</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <compatibleSinceVersion>${hpi.plugin.compatibleSinceVersion}</compatibleSinceVersion>
-                </configuration>
-            </plugin>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>3.29</version>
+        <extensions>true</extensions>
+      </plugin>
 
-            <!-- Java Compiler -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.level}</source>
-                    <target>${java.level}</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.jenkins-ci</groupId>
-                            <artifactId>annotation-indexer</artifactId>
-                            <version>1.12</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
